Auto-load first track, fix track list alignment (#34)
* Fix: remove old floating player, move player into card bottom zone, clean up states


* Auto-select first track on load, fix track layout left-justified on mobile


---------

--- a/styles.css
+++ b/styles.css
@@ -641,10 +641,6 @@ main {
     text-align: center;
   }
 
-  .track-item {
-    justify-content: center;
-  }
-
   .stream-links {
     justify-content: center;
   }
